# tfg-pablo-setrakian

./: .gitignore  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  population_table_first_eval.csv  rename_status.txt  result_table_first.csv  result_table_fourth.csv  result_table_second.csv  result_table_third.csv
bibliography/: references.bib
chapters/: chapter1.aux  chapter1.tex  chapter2.aux  chapter2.tex  chapter2_backup.tex  chapter3.aux  chapter3.tex  chapter4.aux  chapter4.tex  chapter4_backup.tex  chapter5.aux  chapter5.tex  chapter6.aux  chapter6.tex
cover/: cover_CUM.aux  cover_CUM.tex  cover_CUM_data.aux  cover_CUM_data.tex
frontmatter/: abstract.aux  abstract.tex  ack.tex  acknowledgments.aux  acknowledgments.tex  summary.aux  summary.tex
hsi-wave-patches-master/: .gitignore  README.md  create_wavelets.py  inspect_dataset.py  pyproject.toml  split.py
hsi-wave-patches-master/cnn/: engine.py  train.py
hsi-wave-patches-master/cnn/util/: helper_functions.py
tables/: custom_layers.csv  exp_10_classification_report_220_113_78.csv  exp_10_cnn_results_220_113_78.csv  exp_10_confusion_matrix_220_113_78.csv  experiment_metrics_summary.csv  wavelet_classification_report.csv
